added mobile version comment slider

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                    </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-9 offset-lg-2">
+            <div class="col-12 col-lg-9" style="margin: 0 auto">
                 <div class="slider-container fadeIn wow" data-wow-delay="2s">
                     <div class="slider">
                         <div class="slide" data-index="1">
@@ -578,7 +578,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 <script src="https://www.appsgeyser.com/js/datamaps.world.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js" type="text/javascript"></script>
-<script src="js/comments-slider.min.js"></script>
+<script src="js/comments-slider.js"></script>
 <script src="js/map.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/counter.min.js"></script>
