--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             <div id="phone" class="phone fadeIn wow" data-wow-delay="1s">
                 <div id="animate-about-us"></div>
             </div>
+            <div class="col-12 text-center">
+                <button class="btn btn-create-app fadeIn wow" data-wow-delay="2s">Create Now for FREE</button>
+            </div>
         </div>
     </div>
 </section>
@@ -106,25 +109,25 @@
             <div class="col">
                 <div class="steps-item fadeIn wow" data-wow-delay="1s">
                     <div class="icon icon-money fadeIn wow" data-wow-delay="1s"></div>
-                    <p class="fadeIn wow" data-wow-delay="1.3s">Tired of your boring everyday job that doesnt’t bring much money?</p>
-                    <p class="fadeIn wow" data-wow-delay="1.6s">Move to IT-business the easiest way possible.</p>
-                    <p class="fadeIn wow" data-wow-delay="2s">You need $0 and couple of free evenings to start your own app empire</p>
+                    <p class="fadeIn wow" data-wow-delay="1.2s">Tired of your boring everyday job that doesnt’t bring much money?</p>
+                    <p class="fadeIn wow" data-wow-delay="1.4s">Move to IT-business the easiest way possible.</p>
+                    <p class="fadeIn wow" data-wow-delay="1.6s">You need $0 and couple of free evenings to start your own app empire</p>
                 </div>
             </div>
             <div class="col">
-                <div class="steps-item fadeIn wow" data-wow-delay="2s">
+                <div class="steps-item fadeIn wow" data-wow-delay="1.6s">
                     <div class="icon icon-star fadeIn wow" data-wow-delay="2s"></div>
-                    <p class="fadeIn wow" data-wow-delay="2.3s">Target the biggest app market audience in the world: the Google Play market.</p>
-                    <p class="fadeIn wow" data-wow-delay="2.6s">Show them to your friends or get users all over the world.</p>
-                    <p class="fadeIn wow" data-wow-delay="3s">Create your own popular apps and become famous!</p>
+                    <p class="fadeIn wow" data-wow-delay="1.8s">Target the biggest app market audience in the world: the Google Play market.</p>
+                    <p class="fadeIn wow" data-wow-delay="2s">Show them to your friends or get users all over the world.</p>
+                    <p class="fadeIn wow" data-wow-delay="2.2s">Create your own popular apps and become famous!</p>
                 </div>
             </div>
             <div class="col">
-                <div class="steps-item fadeIn wow" data-wow-delay="3s">
+                <div class="steps-item fadeIn wow" data-wow-delay="2.2s">
                     <div class="icon icon-magic-wand fadeIn wow" data-wow-delay="3s"></div>
-                    <p class="fadeIn wow" data-wow-delay="3.3s">Make something really exciting, create your own niche unique mobile experience.</p>
+                    <p class="fadeIn wow" data-wow-delay="2.4s">Make something really exciting, create your own niche unique mobile experience.</p>
                     <p class="fadeIn wow" data-wow-delay="2.6s">Fulfill your fantasies in the form of an app.</p>
-                    <p class="fadeIn wow" data-wow-delay="4s">Express yourself!</p>
+                    <p class="fadeIn wow" data-wow-delay="2.8s">Express yourself!</p>
                 </div>
             </div>
             <div class="col-12">
@@ -139,6 +142,9 @@
     </div>
     <div class="col-lg-6 offset-lg-3 fadeIn wow clock-container" data-wow-delay="1s">
         <div id="clock"></div>
+    </div>
+    <div class="col-12">
+        <button class="btn btn-create-app fadeIn wow text-center" data-wow-delay="1.5s">Create Now for FREE</button>
     </div>
 </section>
 <section class="benefits">
@@ -191,7 +197,7 @@
                 </div>
             </div>
             <div class="col-12 order_8">
-                <button class="btn btn-create-app fadeIn wow" data-wow-delay="3s">Create Now for FREE</button>
+                <button class="btn btn-create-app fadeIn wow" data-wow-delay="2s">Create Now for FREE</button>
             </div>
         </div>
     </div>
@@ -223,6 +229,9 @@
             </div>
             <div class="col-12 col-lg-8 offset-lg-2">
                 <p class="business-offer zoomIn wow" data-wow-delay="2.7s">If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
+            </div>
+            <div class="col-12 text-center">
+                <button class="btn btn-create-app fadeIn wow text-center" data-wow-delay="3s">Create Now for FREE</button>
             </div>
         </div>
     </div>
@@ -290,6 +299,9 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 text-center">
+                <button class="btn btn-create-app fadeIn wow text-center" data-wow-delay="2.5s">Create Now for FREE</button>
+            </div>
         </div>
     </div>
 </section>
@@ -317,6 +329,9 @@
                         <p class="subtitle fadeIn wow" data-wow-delay="2.8s">App Installation Per Day</p>
                     </div>
                 </div>
+            </div>
+            <div class="col-12 text-center">
+                <button class="btn btn-create-app fadeIn wow text-center" data-wow-delay="3s">Create Now for FREE</button>
             </div>
         </div>
     </div>
@@ -491,7 +506,7 @@
                         <li data-target="#carouselExampleIndicators-mobile" data-slide-to="1" class="indicator active"></li>
                         <li data-target="#carouselExampleIndicators-mobile" data-slide-to="2" class="indicator"></li>
                         <li data-target="#carouselExampleIndicators-mobile" data-slide-to="3" class="indicator"></li>
-                        <li data-target="#carouselExampleIndicators-mobile" data-slide-to="4" class="indicator active"></li>
+                        <li data-target="#carouselExampleIndicators-mobile" data-slide-to="4" class="indicator"></li>
                         <li data-target="#carouselExampleIndicators-mobile" data-slide-to="5" class="indicator"></li>
                     </ol>
                  </div>
