--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <nav class="header-navigation">
                     <a href="" class="navigation-item">Start Now</a>
                     <a href="" class="navigation-item">Gamemaker</a>
+                    <!--<a href="" id="dashboard" class="navigation-item">Dashboard</a>-->
                     <a href="" class="navigation-item">Showcase</a>
                     <a href="" class="navigation-item">Contest</a>
                     <a href="" class="navigation-item">FAQ</a>
@@ -54,6 +55,10 @@
                         Login
                         <em class="icon"></em>
                     </button>
+                    <!--<button id="logout" class="btn btn-logout">-->
+                        <!--Login-->
+                        <!--<em class="icon"></em>-->
+                    <!--</button>-->
                 </div>
             </div>
         </div>
@@ -128,7 +133,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="title zoomIn wow" >What can you Achieve with our builder?</h2>
+                <h2 class="title zoomIn wow" data-wow-offset="130">What can you Achieve with our builder?</h2>
             </div>
 
             <div class="col">
@@ -163,7 +168,7 @@
 </section>
 <section class="counter">
     <div class="col-md-6 offset-md-3">
-        <h1 class="counter-title fadeIn wow">Publish your first app in within and take part in our promotional contest to win $200</h1>
+        <h1 class="counter-title fadeIn wow" data-wow-offset="130">Publish your first app in within and take part in our promotional contest to win $200</h1>
     </div>
     <div class="col-lg-6 offset-lg-3 fadeIn wow clock-container" data-wow-delay="1s">
         <div id="clock"></div>
@@ -176,7 +181,7 @@
     <div class="container">
         <div class="row align-items-start">
             <div class="col-12 order_1">
-                <h2 class="title fadeIn wow">Meet Our Main Benefits Becoming Yours</h2>
+                <h2 class="title fadeIn wow" data-wow-offset="150">Meet Our Main Benefits Becoming Yours</h2>
             </div>
 
             <div class="col-6 col-lg-4 order_5">
@@ -231,7 +236,7 @@
     <div class="container">
         <div class="row align-items-start">
             <div class="col-12">
-                <h2 class="title fadeIn wow">Wait! How are you completely free?</h2>
+                <h2 class="title fadeIn wow" data-wow-offset="130">Wait! How are you completely free?</h2>
             </div>
             <div class="col-lg col-12">
                 <div class="banner">
@@ -265,7 +270,7 @@
     <div class="container">
         <div class="row align-items-start">
             <div class="col-12">
-                <h2 class="title zoomIn wow">What Others Say</h2>
+                <h2 class="title zoomIn wow" data-wow-offset="130">What Others Say</h2>
             </div>
             <div class="col-12 col-lg-8 offset-lg-2">
                 <div class="comments">
@@ -334,8 +339,8 @@
     <div class="container">
         <div class="row align-items-start">
             <div class="col-12">
-                <h2 class="title zoomInDown wow">The AppsGeyser platform in numbers</h2>
-                <h3 class="subtitle fadeIn wow" data-wow-delay=".7s">Our apps users on the live map</h3>
+                <h2 class="title zoomInDown wow" data-wow-offset="130">The AppsGeyser platform in numbers</h2>
+                <h3 class="subtitle fadeIn wow" data-wow-delay=".7s" data-wow-offset="130">Our apps users on the live map</h3>
             </div>
             <div class="map fadeIn wow" data-wow-delay="1.4s"></div>
             <div class="map-mobile fadeIn wow" data-wow-delay="1.4s"></div>
@@ -365,7 +370,7 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-12">
-                <h2 class="title zoomIn wow" data-wow-delay="1s">Choose from Over <b>70</b> App Templates</h2>
+                <h2 class="title zoomIn wow" data-wow-delay="1s" data-wow-offset="130">Choose from Over <b>70</b> App Templates</h2>
             </div>
             <div class="col-12 col-lg-6 offset-lg-3">
                 <h3 class="subtitle fadeIn wow" data-wow-delay="1.5s">AppsGeyser offers the largest number of diverse customizable templates and presets for you to create an app from</h3>
