--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <nav class="header-navigation">
                     <a href="" class="navigation-item">Start Now</a>
                     <a href="" class="navigation-item">Gamemaker</a>
-                    <!--<a href="" id="dashboard" class="navigation-item">Dashboard</a>-->
                     <a href="" class="navigation-item">Showcase</a>
                     <a href="" class="navigation-item">Contest</a>
                     <a href="" class="navigation-item">FAQ</a>
@@ -51,6 +50,7 @@
                         </nav>
                     </button>
                     <button class="btn btn-create-app">Create App</button>
+                    <!--<button id="dashboard" class="btn btn-create-app">Dashboard</button>-->
                     <button class="btn btn-login">
                         Login
                         <em class="icon"></em>
